fixed bug with first element of the sidenav being hidden by the navbar

--- a/css/template.css
+++ b/css/template.css
@@ -5844,6 +5844,8 @@ body {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   font-size: 1.3em; }
+  #sidebar-wrapper > .sidebar-nav {
+    padding-top: 45px; }
 
 #wrapper.toggled #sidebar-wrapper {
   width: 300px; }
